# ffibenchmark

./: .gitignore  ffibenchmark.dart  pubspec.yaml
lib/http-server/: http_server.dart
lib/nbody/: nbody.dart
lib/spectral-norm/: spectral_norm.dart
native/http-server/: CMakeLists.txt  library.c
native/nbody/: CMakeLists.txt  nbody.c
native/spectral-norm/: spectral-norm.c
